Adjusted spacing of form and fixed icon buttons

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -24,6 +24,7 @@ header {
         color: $white;
         padding: 70px;
         text-align: center;
+        max-width: 100vw;
     }
 
     i {
